@@ -9,12 +9,6 @@
         <artifactId>algosim</artifactId>
         <version>1.1.0-SNAPSHOT</version>
     </parent>
-    <properties>
-        <java.version>1.8</java.version>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.compiler.target>${java.version}</maven.compiler.target>
-        <springfox-version>2.8.0</springfox-version>
-    </properties>
 
     <profiles>
         <profile>
@@ -47,10 +41,16 @@
                         <artifactId>jib-maven-plugin</artifactId>
                         <version>2.2.0</version>
                         <configuration>
+                            <from>
+                                <image>openjdk:8-jre-slim</image>
+                            </from>
                             <to>
                                 <image>${project.artifactId}</image>
                             </to>
                             <container>
+                                <jvmFlags>
+                                    <jvmFlag>-Xverify:none</jvmFlag>
+                                </jvmFlags>
                                 <ports>
                                     <port>8080</port>
                                 </ports>
